<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_red"
    tools:context=".LoginPage">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:text="@string/login_text"
        android:textColor="@android:color/white"
        android:textColorHighlight="@color/colorAccent"
        android:textSize="68sp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_centerHorizontal="true"

        android:layout_alignStart="@+id/editTextEmail"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="259dp"
        android:background="@drawable/text_field"
        android:inputType="textPassword"
       />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="300dp"
        android:layout_height="62dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:background="@drawable/text_field"
        android:inputType="textPersonName"
         />

    <Button
        android:id="@+id/signin"
        android:layout_width="204dp"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="149dp"
        android:background="@drawable/red_button"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="245dp"
        android:layout_height="30dp"
        android:layout_above="@+id/editTextPassword"
        android:layout_alignEnd="@+id/signin"
        android:layout_marginBottom="3dp"
        android:text="@string/password"
        android:textAlignment="textStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="245dp"
        android:layout_height="32dp"
        android:layout_alignEnd="@+id/signin"
        android:layout_alignParentTop="true"
        android:layout_marginTop="190dp"
        android:text="@string/username"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="102dp"
        android:text="@string/not_have_an_account_signup_here"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</RelativeLayout>