<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_red"
    tools:context=".RegisterPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/register_user"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/First_name"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginBottom="59dp"
        android:background="@drawable/text_field"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/Last_name"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/textView6"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="19dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="59dp"
        android:layout_toEndOf="@+id/First_name"
        android:autofillHints=""
        android:background="@drawable/text_field"
        android:ems="10"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="316dp"
        android:background="@drawable/text_field"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="214dp"
        android:autofillHints=""
        android:background="@drawable/text_field"
        android:ems="10"
        android:inputType="textPassword"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_above="@+id/First_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="41dp"
        android:layout_marginBottom="4dp"
        android:text="@string/first_name"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_above="@+id/First_name"
        android:layout_alignEnd="@+id/textView3"
        android:layout_marginEnd="-36dp"
        android:text="@string/last_name"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="128dp"
        android:layout_height="40dp"
        android:layout_above="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="-2dp"
        android:text="@string/username"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="133dp"
        android:layout_height="32dp"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="2dp"
        android:text="@string/password"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textViewSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="103dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="70dp"
        android:text="Have an account? SignIn Here"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/register_user"
        style="@android:style/Widget.Button"
        android:layout_width="200dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:background="@drawable/red_button"
        android:text="@string/register"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

</RelativeLayout>