<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_red"
    tools:context=".PlayQuiz">


    <TextView
        android:id="@+id/textView_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="30dp"
        android:text="05:00"
        android:textColor="@android:color/darker_gray"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView_question"
        android:layout_width="322dp"
        android:layout_height="77dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="139dp"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_q"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="12dp"
        android:layout_marginTop="25dp"
        android:text="@string/question"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView_qc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView_q"
        android:layout_marginStart="12dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/textView_q"
        android:text="@string/question_no"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="241dp"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="69dp"
        android:background="@drawable/red_button"
        android:text="@string/end_quiz"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_choice1"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="356dp"
        android:background="@drawable/text_field"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_choice2"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="295dp"
        android:background="@drawable/text_field"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_choice3"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="234dp"
        android:background="@drawable/text_field"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_choice4"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="172dp"
        android:background="@drawable/text_field"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


</RelativeLayout>